Modified wrangling and configuration for running with nextflow

--- a/nf-pipelines/workflows/american-admixture-LDMAP.config
+++ b/nf-pipelines/workflows/american-admixture-LDMAP.config
@@ -1,5 +1,20 @@
 params {
-	sample_number = 20 
-	ldmap_path = "/usr/bin/ldmapper1"
+	sample_number = 100 
+	ldmap_path = "/clusteruy/home/grijo/software/ldmapper1"
 	outdir = "."
 }
+
+
+process {
+	conda = "./bernardo.yml"
+	executor = "slurm"
+	cpus  = 8
+	queue = "normal"
+	memory = "24 GB"
+
+
+}
+
+
+
+
