parallel ldmap now working

--- a/nf-pipelines/workflows/recombination-analysis.config
+++ b/nf-pipelines/workflows/recombination-analysis.config
@@ -1,5 +1,5 @@
 params {
-        ldmap_path = "/usr/bin/ldmapper1"
+        ldmap = "/usr/bin/ldmapper1"
         vcf_dir = ""
         outdir = "results"
 }
