modified config file for running on clusteruy

--- a/nf-pipelines/workflows/recombination-analysis.config
+++ b/nf-pipelines/workflows/recombination-analysis.config
@@ -1,6 +1,55 @@
 params {
         ldmap = "/usr/bin/ldmapper1"
-        vcf_dir = ""
+        vcfs = "data/*.vcf.gz"
         outdir = "results"
+        window_size = 10000
+        window_offset = 5000
+	chromosome = 1
 }
+
+
+profiles {
+
+        standard {
+                process.executor = "local"
+                process.cpus = 12
+                process.memory = 40
+                process.conda = "/export/home/grijo/miniconda3/envs/slim"
+                }
+
+        clusteruy {
+                process.executor = "slurm"
+                process.cpus=20
+                process.memory="30G"
+                process.conda="/clusteruy/home/grijo/miniconda3/envs/slim"
+                process.clusterOptions="--qos=normal"
+                executor.queueSize=30
+        }
+	
+}
+
+
+manifest {
+    description = "Run ldmap on vcf"
+    mainScript = "recombination-analysis.nf"
+
+}
+
+
+trace {
+    enabled = true
+    fields  = "task_id,hash,native_id,process,tag,name,status,exit,cpus,start,complete,realtime,%cpu,%mem"
+    file = "run_info/trace_${chromosome}.txt"
+    }
+
+timeline {
+    enabled = true
+    file = "run_info/timeline_${chromosome}.html"
+}
+
+report {
+    enabled = true
+    file = "run_info/report_${chromosome}.html"
+}
+
 
