added order ldmap script

--- a/nf-pipelines/workflows/recombination-analysis.config
+++ b/nf-pipelines/workflows/recombination-analysis.config
@@ -19,12 +19,18 @@ profiles {
                 }
 
         clusteruy {
-                process.executor = "slurm"
-                process.cpus=20
-                process.memory="30G"
+                process.executor = "slurm" 
+                process.memory="10G"
                 process.conda="/clusteruy/home/grijo/miniconda3/envs/slim"
-                process.clusterOptions="--qos=normal"
-                executor.queueSize=30
+                process.clusterOptions="--qos=besteffort --partition=besteffort"
+                process.errorStrategy="retry"
+                executor.queueSize=50
+		
+		process {	withLabel: big {
+        				cpus = 20
+        				memory = 20.GB
+        			} 
+			}
         }
 	
 }
