--- a/workflows/recombination-analysis.config
+++ b/workflows/recombination-analysis.config
@@ -21,10 +21,10 @@ profiles {
         clusteruy {
                 process.executor = "slurm" 
                 process.memory="10G"
-                process.conda="/clusteruy/home/grijo/miniconda3/envs/slim"
+                process.conda="/clusteruy/home/bbertoni/miniconda3/envs/bernardo"
                 process.clusterOptions="--qos=besteffort --partition=besteffort"
                 process.errorStrategy="retry"
-                executor.queueSize=50
+		executor.queueSize=50
 		
 		process {	withLabel: big {
         				cpus = 20
@@ -37,7 +37,7 @@ profiles {
 
 
 manifest {
-    description = "Run ldmap on vcf"
+    description = "Run ldmap on vcf ${chromosome}"
     mainScript = "recombination-analysis.nf"
 
 }
@@ -46,17 +46,17 @@ manifest {
 trace {
     enabled = true
     fields  = "task_id,hash,native_id,process,tag,name,status,exit,cpus,start,complete,realtime,%cpu,%mem"
-    file = "run_info/trace_${chromosome}.txt"
+    file = "run_info/trace_chr${chromosome}.txt"
     }
 
 timeline {
     enabled = true
-    file = "run_info/timeline_${chromosome}.html"
+    file = "run_info/timeline_chr${chromosome}.html"
 }
 
 report {
     enabled = true
-    file = "run_info/report_${chromosome}.html"
+    file = "run_info/report_chr${chromosome}.html"
 }
 
 
